--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,7 +1,17 @@
 .container {
-    width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
+
+    @include media(480px) {
+        width: 480px;
+    }
+    
+    @include media(768px) {
+        width: 768px;
+    }
+
+    @include media(1200px) {
+        width: 1200px;
+    }
 }
