--- a/sass/layout/_about.scss
+++ b/sass/layout/_about.scss
@@ -1,3 +1,9 @@
+@media screen and (max-width: 1199px) {
+    .about {
+        display: none;
+    }
+}
+
 .about-list {
     display: flex;
     margin-left: -30px;
@@ -5,7 +11,7 @@
 
 .about-list__item {
     position: relative;
-    flex-basis: (1200px / 3) - 30px;
+    flex-basis: calc((100% - 3*30px) / 3);
     margin-left: 30px;
     z-index: -1;
 }
