--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,11 +1,12 @@
 .client-list {
     display: flex;
-    margin-left: -30px;
+    flex-wrap: wrap;
+    margin: -15px;
 }
 
 .client-list__item {
-    flex-basis: (1200px / 6) - 30px;
-    margin-left: 30px;
+    flex-basis: calc((100% - 4*15px) / 2);
+    margin: 15px;
 }
 
 .client-list__link {
