--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,15 +1,36 @@
-.features {
-    padding-bottom: 0;
+@include media(1200px) {
+    .features {
+        padding-bottom: 0;
+    }
 }
+.feature-list{
+    margin-bottom: -30px;
 
-.feature-list {
-    display: flex;
-    margin-left: -30px;
+    @include media(768px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: -30px;
+    }
+
+    @include media(1200px) {
+        @include centeredFlex;
+        flex-wrap: nowrap;
+        margin-bottom: 0;
+    }
 }
 
 .feature-list__item {
-    flex-basis: (1200px / 4) - 30px;
-    margin-left: 30px;
+    margin-bottom: 30px;
+
+    @include media(768px) {
+        flex-basis: calc((100% - 2*30px) / 2);
+        margin-left: 30px;
+    }
+
+    @include media(1200px) {
+        flex-basis: calc((100% - 4*30px) / 4);
+        margin-bottom: 0;
+    }
 }
 
 .feature-list__icon {
@@ -17,6 +38,8 @@
     width: 100%;
     height: 120px;
     margin-bottom: 30px;
+    border: none;
+    border-radius: 4px;
     background-color: var(--secondary-background-color);
 }
 
@@ -25,9 +48,14 @@
 
     color: var(--title-text-color);
     @include font(null, null, 14px, 1.14, null);
+    text-align: center;
     text-transform: uppercase;
+
+    @include media(768px) {
+        text-align: left;
+    }
 }
 
 .feature-list__text {
-    @include font(null, null, 14px, 1.71, null);
+    @include font(null, null, 14px, 1.71, 0.03em);
 }
