--- a/sass/layout/_footer-form.scss
+++ b/sass/layout/_footer-form.scss
@@ -1,5 +1,5 @@
 .footer-form {
-    margin-left: auto;
+    /*margin-left: auto;*/
 }
 
 .footer-form__text {
@@ -11,19 +11,20 @@
 }
 
 .email-form {
-    display: flex;
+    /*display: flex;*/
 }
 .email-form__label {
-    margin-right: 12px;
+    /*margin-right: 12px;*/
 }
 
 .email-form__input {
     display: inline-block;
-    width: 358px;
+    width: 100%;
     height: 50px;
     padding-top: 15px;
     padding-bottom: 15px;
     padding-left: 16px;
+    margin-bottom: 20px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     outline: none;
@@ -34,7 +35,6 @@
 }
 
 .email-form__btn {
-    padding: 0;
     @include centeredFlex(inline-flex);
 }
 
