--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,10 +1,9 @@
 .hero {
-    max-width: 1600px;
-    height: 600px;
-    padding-top: 200px;
-    padding-bottom: 200px;
-    margin-right: auto;
+    height: 400px;
+    padding-top: 118px;
+    padding-bottom: 118px;
     margin-left: auto;
+    margin-right: auto;
 
     background-color: var(--background-color-hero);  
     background-image: linear-gradient(to right, var(--background-color-gradient), var(--background-color-gradient)), 
@@ -15,13 +14,41 @@
     text-align: center;
 
     &__title {
-        margin-right: auto;
-        width: 696px;
-        margin-bottom: 30px;
+        margin-bottom: 30px;   
         margin-left: auto;
+        margin-right: auto;
 
-        @include font(null, 900, 44px, 1.36, 0.06em);
+        @include font(null, 900, 26px, 1.62, 0.06em);
         color: var(--white-color);
-        text-align: center;
+        text-transform: uppercase;
+    }
+}
+
+@include media(480px){
+    .hero {
+        width: 480px;
+        &__title {
+            width: 360px;
+        }
+    }
+}
+
+@include media(768px){
+    .hero {
+        width: 768px;
+    }
+}
+
+@include media(1200px) {
+    .hero {
+        width: 1600px;
+        height: 600px;
+        padding-top: 200px;
+        padding-bottom: 200px;
+
+        &__title {
+            width: 696px;
+            @include font(null, 900, 44px, 1.36, 0.06em);
+        }
     }
 }
