--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -20,13 +20,14 @@
 
         @include font(null, 900, 26px, 1.62, 0.06em);
         color: var(--white-color);
+        text-align: center;
         text-transform: uppercase;
     }
 }
 
 @include media(480px){
     .hero {
-        width: 480px;
+        max-width: 480px;
         &__title {
             width: 360px;
         }
@@ -35,13 +36,13 @@
 
 @include media(768px){
     .hero {
-        width: 768px;
+        max-width: 768px;
     }
 }
 
-@include media(1200px) {
+@media screen and (min-width: 1200px) {
     .hero {
-        width: 1600px;
+        max-width: 1600px;
         height: 600px;
         padding-top: 200px;
         padding-bottom: 200px;
