--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -10,12 +10,12 @@
     @include media(768px) {
         display: flex;
         flex-wrap: wrap;
-        margin-left: -30px;
+        margin: -15px;
     }
 
     @include media(1200px) {
         @include centeredFlex;
-        flex-wrap: nowrap;
+        margin-left: -30px;
     }
 }
 
@@ -23,13 +23,13 @@
     margin-bottom: 30px;
 
     @include media(768px) {
-        flex-basis: calc((100% - 2*30px) / 2);
-        margin-left: 30px;
+        flex-basis: calc((100% - 4*15px) / 2);
+        margin: 15px;
     }
 
     @include media(1200px) {
-        flex-basis: calc((100% - 4*30px) / 4);
-        margin-bottom: 0;
+        flex-basis: calc((100% / 4) - 30px);
+        margin: 0 0 0 30px;
     }
 }
 
