--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -2,6 +2,7 @@
     @include font(null, 700, 26px, 1.19, 0.03em);
     font-family: Raleway;
     color: var(--accent-color);
+    margin-bottom: 20px;
 }
 
 .logo__studio {
@@ -9,5 +10,6 @@
 
     &--inverse {
         color: var(--white-color);
+        margin-bottom: 0;
     }
 }
