--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,8 +25,9 @@
     transform: translate(-50%, -50%) scale(1);
 
     display: block;
-    width: 528px;
-    min-height: 581px;
+    width: 450px;
+    /*width: 528px;
+    min-height: 581px;*/
     padding: 40px;
     border-radius: 4px;
 
@@ -69,7 +70,8 @@
 
 .modal-form__title {
     margin-bottom: 12px;
-    @include font(null, 700, 20px, 1.15, null);
+    @include font(null, 700, 20px, 1.5, null);
+    /*@include font(null, 700, 20px, 1.15, null);*/
     text-align: center;
     color: var(--title-text-color);
 }
