--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -2,11 +2,24 @@
     display: flex;
     flex-wrap: wrap;
     margin: -15px;
+
+    @include desk {
+        margin: 0 -15px;
+    }
 }
 
 .client-list__item {
-    flex-basis: calc((100% - 4*15px) / 2);
+    flex-basis: calc((100% - 2*30px) / 2);
     margin: 15px;
+
+    @include tab {
+        flex-basis: calc((100% - 3*30px) / 3);
+    }
+
+    @include desk {
+        flex-basis: calc((100% - 6*30px) / 6);
+        margin: 0 15px;
+    }
 }
 
 .client-list__link {
