--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,35 +1,37 @@
-@include media(1200px) {
+@include desk {
     .features {
         padding-bottom: 0;
     }
 }
 
 .feature-list{
-    margin-bottom: -30px;
-
-    @include media(768px) {
+    @include tab {
         display: flex;
         flex-wrap: wrap;
         margin: -15px;
     }
 
-    @include media(1200px) {
+    @include desk {
         @include centeredFlex;
-        margin-left: -30px;
+        margin: 0 -15px;
     }
 }
 
 .feature-list__item {
-    margin-bottom: 30px;
-
-    @include media(768px) {
-        flex-basis: calc((100% - 4*15px) / 2);
+    @include tab {
+        flex-basis: calc((100% - 2*30px) / 2);
         margin: 15px;
     }
 
-    @include media(1200px) {
+    @include desk {
         flex-basis: calc((100% / 4) - 30px);
-        margin: 0 0 0 30px;
+        margin: 0 15px;
+    }
+
+    &:not(:last-child) {
+        @media screen and (max-width: 767px) {
+            margin-bottom: 30px;
+        }
     }
 }
 
@@ -51,7 +53,7 @@
     text-align: center;
     text-transform: uppercase;
 
-    @include media(768px) {
+    @include tab {
         text-align: left;
     }
 }
