--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -13,43 +13,38 @@
     background-size: cover;
     text-align: center;
 
-    &__title {
-        margin-bottom: 30px;   
-        margin-left: auto;
-        margin-right: auto;
-
-        @include font(null, 900, 26px, 1.62, 0.06em);
-        color: var(--white-color);
-        text-align: center;
-        text-transform: uppercase;
+    @include mob {
+        width: 480px;
     }
-}
 
-@include media(480px){
-    .hero {
-        max-width: 480px;
-        &__title {
-            width: 360px;
-        }
+    @include tab {
+        width: 768px;
     }
-}
 
-@include media(768px){
-    .hero {
-        max-width: 768px;
-    }
-}
-
-@media screen and (min-width: 1200px) {
-    .hero {
-        max-width: 1600px;
+    @include desk {
+        width: 1600px;
         height: 600px;
         padding-top: 200px;
         padding-bottom: 200px;
+    }
+}
 
-        &__title {
-            width: 696px;
-            @include font(null, 900, 44px, 1.36, 0.06em);
-        }
+.hero__title {
+    margin-bottom: 30px;   
+    margin-left: auto;
+    margin-right: auto;
+
+    @include font(null, 900, 26px, 1.62, 0.06em);
+    color: var(--white-color);
+    text-align: center;
+    text-transform: uppercase;
+
+    @include mob {
+        width: 360px;
+    }
+
+    @include desk {
+        width: 696px;
+        @include font(null, 900, 44px, 1.36, 0.06em);
     }
 }
