--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,18 +1,21 @@
 .team {
     background-color: var(--secondary-background-color);
-    margin-right: auto;
-    margin-left: auto;
 }
 
 .team-list {
-    /*display: flex;
-    margin-left: -30px;*/
+    @include tab {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+
+    @include desk {
+        @include centeredFlex;
+        margin: 0 -15px;
+    }
 }
 
 .team-list__item {
-    /*flex-basis: (1200px / 4) - 30px;
-    margin-left: 30px;*/
-
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -20,14 +23,30 @@
 
     background-color: var(--white-color);
 
-    &:not(:last-child) {
-        margin-bottom: 30px;
+    @media screen and (max-width:767px) {
+        &:not(:last-child) {
+            margin-bottom: 30px;
+        }
+    }
+
+    @include tab { 
+        flex-basis: calc((100% - 2*30px) / 2);
+        margin: 15px;
+    }
+
+    @include desk {
+        flex-basis: calc((100% / 4) - 30px);
+        margin: 0 15px;
     }
 }
 
 .team-list__meta {
     padding-top: 30px;
     padding-bottom: 24px;
+
+    @include desk {
+        padding-bottom: 30px;
+    }
 }
 
 .team-list__name {
