--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -22,8 +22,20 @@
     cursor: pointer;
 }
 
-@mixin media($size) {
-    @media screen and (min-width:$size) {
+@mixin mob {
+    @media screen and (min-width: 480px) {
+        @content;
+    }
+}
+
+@mixin tab {
+    @media screen and (min-width: 768px) {
+        @content;
+    }
+}
+
+@mixin desk {
+    @media screen and (min-width: 1200px) {
         @content;
     }
 }
