--- a/css/main.css
+++ b/css/main.css
@@ -63,9 +63,15 @@ body {
   letter-spacing: 0.03em;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 .section {
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .section__title {
@@ -89,6 +95,8 @@ body {
 }
 
 .container {
+  min-width: 320px;
+  width: 100%;
   padding-left: 15px;
   padding-right: 15px;
   margin-right: auto;
@@ -317,10 +325,11 @@ body {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: var(--background-overlay-modal);
   opacity: 1;
+  overflow-y: scroll;
   transition: opacity 250ms var(--timing-function), visibility 250ms var(--timing-function);
 }
 
