--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,10 +3,11 @@
     top: 0;
     left: 0;
 
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background-color: var(--background-overlay-modal);
     opacity: 1;
+    overflow-y: scroll;
 
     transition: opacity 250ms var(--timing-function),
     visibility 250ms var(--timing-function);
