--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,6 +1,8 @@
 .section {
     padding-top: 60px;
     padding-bottom: 60px;
+    margin-right: auto;
+    margin-left: auto;
 
     &__title {
         margin-bottom: 30px;
