--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,15 +14,15 @@
     text-align: center;
 
     @include mob {
-        width: 480px;
+        max-width: 480px;
     }
 
     @include tab {
-        width: 768px;
+        max-width: 768px;
     }
 
     @include desk {
-        width: 1600px;
+        max-width: 1600px;
         height: 600px;
         padding-top: 200px;
         padding-bottom: 200px;
