--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -10,6 +10,7 @@
 }
 
 .checkbox__text {
+    margin-right: 0;
     @include font(null, null, 12px, 1.17, null);
     color: var(--primary-text-color);
 
