--- a/sass/layout/_site-nav.scss
+++ b/sass/layout/_site-nav.scss
@@ -1,4 +1,4 @@
-.site-nav {
+/*.site-nav {
     @include centeredFlex(flex, center, null);
     margin-left: 93px;
 } 
@@ -37,4 +37,4 @@
         border-radius: 2px;
         background-color: var(--accent-color);
     }
-}
+}*/
