--- a/css/main.css
+++ b/css/main.css
@@ -122,6 +122,7 @@ body.modal-open {
 }
 
 .header {
+  position: relative;
   border-bottom: 1px solid var(--border-header-color);
 }
 
@@ -163,6 +164,20 @@ body.modal-open {
   display: none;
 }
 
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  background-color: var(--white-color);
+  padding: 48px 40px;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+}
+
 .logo {
   font-weight: 700;
   font-size: 26px;
@@ -181,48 +196,46 @@ body.modal-open {
   margin-bottom: 0;
 }
 
-.site-nav {
-  display: flex;
-  align-items: center;
-  margin-left: 93px;
-}
+/*.site-nav {
+    @include centeredFlex(flex, center, null);
+    margin-left: 93px;
+} 
 
 .site-nav__item:not(:first-child) {
-  margin-left: 50px;
+    margin-left: 50px;
 }
 
 .site-nav__link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: var(--title-text-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  transition: color 250ms var(--timing-function);
-}
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-.site-nav__link:hover, .site-nav__link:focus {
-  color: var(--accent-color);
+    color: var(--title-text-color);
+    @include font(null, 500, 14px, 1.14, 0.02em);
+
+    transition: color 250ms var(--timing-function);
+
+    &:hover, &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .site-nav__link--current {
-  position: relative;
-  color: var(--accent-color);
-}
+    position: relative;
+    color: var(--accent-color);
 
-.site-nav__link--current::after {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: -1px;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: var(--accent-color);
-}
+    &::after {
+        content: '';
+        position: absolute;
+        left: 0;
+        bottom: -1px;
 
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        background-color: var(--accent-color);
+    }
+}*/
 .header-contact {
   display: flex;
   align-items: center;
