--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,6 +7,7 @@
 @import './components/container';
 @import './layout/header';
 @import './components/logo';
+@import './layout/menu';
 @import './layout/site-nav';
 @import './layout/header-contact';
 @import './layout/hero';
